@@ -36,6 +36,8 @@ http \- Client-side implementation of the HTTP/1.0 protocol
 .sp
 \fB::http::ncode \fItoken\fR
 .sp
+\fB::http::meta \fItoken\fR
+.sp
 \fB::http::data \fItoken\fR
 .sp
 \fB::http::error \fItoken\fR
@@ -314,6 +316,11 @@ code (200, 404, etc.) from the \fBhttp\fR element of the state array.
 This is a convenience procedure that returns the \fBcurrentsize\fR
 element of the state array, which represents the number of bytes
 received from the URL in the \fB::http::geturl\fR call.
+.TP
+\fB::http::meta\fR \fItoken\fR
+This is a convenience procedure that returns the \fBmeta\fR
+element of the state array which contains the HTTP response
+headers. See below for an explanation of this element.
 .TP
 \fB::http::cleanup\fR \fItoken\fR
 This procedure cleans up the state associated with the connection
